add manual spoof command
